# Flask-web-dev

./: README.md  information.md  main.py  pyproject.toml  requirements.txt
static/: Nikita.txt
templates/: base.html  index.html  updates.html
