[tool.poetry]
name = "repl_nix_Flask-web-dev"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = { version = "^2.3.2", python = "" }
Flask-SQLAlchemy = "^3.0.5"


#[tool.poetry.dependencies]
#python = "^3.10"
#flask = "^1.1.4"
#Flask-SQLAlchemy = "^3.0.5"
#Flask = "^2.3.2"
#Flask-SQLAlchemy = "^3.0.5""


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
