
[tool.poetry]
name = "repl_nix_Flask-web-dev"
version = "0.1.0"
description = ""
authors = ["nikitapandey052004@gmail.com"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.3.2"
Flask-SQLAlchemy = "^3.0.5"
SQLAlchemy = "^1.4.0"  # Use a compatible version of SQLAlchemy with Flask-SQLAlchemy 3.0.5

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
